--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: ${GOOGLE_USERNAME}
-    password: ${PASSWORD}
+    password: ${GOOGLE_PASSWORD}
     properties:
       mail:
         smtp:
@@ -42,10 +42,3 @@ spring:
           connectiontimeout: 5000
           timeout: 5000
           writetimeout: 5000
-
-jwt:
-  secret_key: ${JWT_SECRET_KEY}
-  access_exp: ${JWT_ACCESS_EXP}
-  refresh_exp: ${JWT_REFRESH_EXP}
-  header: ${JWT_HEADER}
-  prefix: ${JWT_PREFIX}
