--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew build -x test --info # test 빌드 제거 수정 필요
+        run: ./gradlew build --info
       - name: check gradle
         run: ./gradlew check
