--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,10 +20,10 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build --info
+      - name: Build with Gradle # test 제외 수정
+        run: ./gradlew build -x test --info
       - name: check gradle
-        run: ./gradlew check
+        run: ./gradlew check -x test
 
       - name: Login to Dockerhub
         uses: docker/login-action@v1
