--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'temurin'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build --info
+      - name: Build with Gradle # test 제외 수정
+        run: ./gradlew build -x test --info
       - name: check gradle
-        run: ./gradlew check
+        run: ./gradlew check -x test
